db migrations and dbal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
     environment:
       - APP_ENV=${APP_ENV}
       - DATABASE_URL=mysql://${MARIADB_USER}:${MARIADB_PASSWORD}@db:3306/${DATABASE_NAME}?serverVersion=mariadb-10.5.9
+      - DATABASE_NAME=${DATABASE_NAME}
+      - MARIADB_USER=${MARIADB_USER}
+      - MARIADB_PASSWORD=${MARIADB_PASSWORD}
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
     volumes:
       - ./:/var/www
