--- a/app/composer.json
+++ b/app/composer.json
@@ -44,6 +44,8 @@
     "require": {
         "php": "8.1.*",
         "composer/package-versions-deprecated": "^1.10.99",
+        "doctrine/dbal": "^3.3",
+        "doctrine/migrations": "^3.4",
         "elie29/zend-phpdi-config": "v8.1.1",
         "laminas/laminas-component-installer": "^2.6",
         "laminas/laminas-config-aggregator": "^1.6",
@@ -53,7 +55,9 @@
         "laminas/laminas-stdlib": "^3.6",
         "mezzio/mezzio": "^3.7",
         "mezzio/mezzio-fastroute": "^3.0.3",
-        "mezzio/mezzio-helpers": "^5.7"
+        "mezzio/mezzio-helpers": "^5.7",
+        "phpstan/phpstan": "^1.4",
+        "symfony/console": "^6.0"
     },
     "require-dev": {
         "laminas/laminas-development-mode": "^3.3.0",
@@ -81,6 +85,7 @@
         "development-status": "laminas-development-mode status",
         "mezzio": "laminas --ansi",
         "check": [
+            "@phpstan",
             "@cs-check",
             "@test"
         ],
@@ -89,7 +94,9 @@
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "serve": "php -S 0.0.0.0:8080 -t public/",
+        "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon",
         "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "migrations": "./vendor/bin/doctrine-migrations"
     }
 }
