--- a/app/composer.json
+++ b/app/composer.json
@@ -52,8 +52,11 @@
         "laminas/laminas-config-aggregator": "^1.6",
         "laminas/laminas-db": "^2.13",
         "laminas/laminas-diactoros": "^2.7",
+        "laminas/laminas-i18n": "^2.15",
+        "laminas/laminas-inputfilter": "^2.13",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.6",
+        "laminas/laminas-validator": "^2.17",
         "mezzio/mezzio": "^3.7",
         "mezzio/mezzio-fastroute": "^3.0.3",
         "mezzio/mezzio-helpers": "^5.7",
