--- a/app/composer.json
+++ b/app/composer.json
@@ -44,6 +44,7 @@
     "require": {
         "php": "8.1.*",
         "composer/package-versions-deprecated": "^1.10.99",
+        "doctrine/coding-standard": "^9.0",
         "doctrine/dbal": "^3.3",
         "doctrine/migrations": "^3.4",
         "elie29/zend-phpdi-config": "v8.1.1",
@@ -57,6 +58,7 @@
         "mezzio/mezzio-fastroute": "^3.0.3",
         "mezzio/mezzio-helpers": "^5.7",
         "phpstan/phpstan": "^1.4",
+        "squizlabs/php_codesniffer": "^3.6",
         "symfony/console": "^6.0"
     },
     "require-dev": {
